# cobo

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  JOURNAL.md  README.md  action.yml  prek.toml  pyproject.toml
.github/: release-drafter.yml  release-please-config.json
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  feature-request.md
.github/workflows/: cd.yml  ci.yml  cobo-smoke.yml  release-please.yml  release.yml
docker/: Dockerfile  action.yml  entrypoint.sh
docs/: JOURNAL.md  fragment-updates.md
docs/superpowers/plans/: 2026-06-23-fragment-updates.md
docs/superpowers/specs/: 2026-06-23-fragment-updates-design.md
src/cobo/: __init__.py  __main__.py  cli.py  errors.py  exit_codes.py  globals.py  paths.py  source_commands.py
src/cobo/commands/: __init__.py  check.py  lock_import.py  record.py  sync.py
src/cobo/config/: __init__.py  defaults.py  loader.py  schema.py
src/cobo/lock/: __init__.py  diff.py  io.py  schema.py
src/cobo/sources/: __init__.py  discover.py  managed.py  render.py  repo.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_check_cli.py  test_cli.py
tests/integration/: __init__.py  test_blob_sha.py  test_check_sync.py  test_source_commands.py  test_sources_repo.py
tests/smoke/: __init__.py  test_smoke.py
tests/unit/: __init__.py  test_check.py  test_cli_config_path.py  test_config_defaults.py  test_config_loader.py  test_config_schema.py  test_discover.py  test_errors.py  test_globals.py  test_lock_diff.py  test_lock_io.py  test_lock_schema.py  test_managed.py  test_paths.py  test_render.py
